# unity-use-protobuf

./: ReadMe.md
client-unity/Assets/Example/: Example.cs  Example.unity
client-unity/Assets/Plugins/Protobuf/Google.Protobuf/Reflection/: FeatureSetDescriptor.cs
client-unity/ProjectSettings/: ProjectSettings.asset
proto/: build-proto.sh  proto-build.rs
server-rs/: Cargo.toml
server-rs/protocols/: Cargo.toml
server-rs/protocols/src/: lib.rs
server-rs/protocols/src/proto/: tutorial.rs
server-rs/server-http/: Cargo.toml
server-rs/server-http/src/: main.rs
